--- a/测试报告的其他小功能.md
+++ b/测试报告的其他小功能.md
@@ -1,6 +1,8 @@
 <img width="527" height="87" alt="image" src="https://github.com/user-attachments/assets/bf5d9d1f-6205-4fd9-85e5-02bee2795d62" /><br>
 通过allure.title可以给case添加更直观的名称，增加测试报告的可读性；主要是改动suites中的名字<br>
 <img width="1919" height="889" alt="image" src="https://github.com/user-attachments/assets/02f51a8a-f177-4633-a0a2-073bbf27f154" /><br>
+epic会给当前case设置上级的项目，所有有这个装饰器对应epic的case都会在一个项目下，影响可视化界面的Behavior界面
+<img width="1892" height="911" alt="image" src="https://github.com/user-attachments/assets/c9e1e181-3275-45ae-b002-de3ee7276a41" />
 <img width="758" height="279" alt="image" src="https://github.com/user-attachments/assets/01dfcb5f-9452-4945-b483-5fbc970b142c" /><br>
 以上是常见装饰器用法
 
