--- a/测试报告的其他小功能.md
+++ b/测试报告的其他小功能.md
@@ -6,6 +6,21 @@ epic、feature、story会给当前case设置上级的项目，所有有这个装
 <img width="1892" height="911" alt="image" src="https://github.com/user-attachments/assets/c9e1e181-3275-45ae-b002-de3ee7276a41" />
 description,severity会在选中用例右侧的详情页展现<br>
 <img width="1911" height="604" alt="image" src="https://github.com/user-attachments/assets/5e19f41a-987b-471a-babf-c24661ba4b81" /><br>
+severity具体写法见下<br>
+<img width="742" height="443" alt="image" src="https://github.com/user-attachments/assets/85459b5a-e532-4a26-9de6-5c85a36fd47b" /><br>
+加了step后的前后差别是对于报告审阅人来说更友好<br>
+<img width="617" height="334" alt="image" src="https://github.com/user-attachments/assets/e16fe83d-7f83-46fc-a7be-d425447856a4" /><br>
+<img width="1512" height="623" alt="image" src="https://github.com/user-attachments/assets/548af76d-e2ae-4d23-931f-26287abaf451" /><br>
+通过link,issue等可以添加连接，用来跳转到对应网站，比如jira<br>
+<img width="924" height="394" alt="image" src="https://github.com/user-attachments/assets/879d85b8-324e-4f4a-9228-9610a74c7174" /><br>
+<img width="716" height="252" alt="image" src="https://github.com/user-attachments/assets/5c188fef-e190-4b64-afbb-578b3367565c" /><br>
+link加了name就变成类似超链接的样子，美观+可读<br>
+<img width="1113" height="498" alt="image" src="https://github.com/user-attachments/assets/19b17957-6a17-46d0-aa6e-eb649a9dbfa3" /><br>
+可以通过命令行参数只执行某个装饰器等于特定值的testcase<br>
+<img width="1088" height="354" alt="image" src="https://github.com/user-attachments/assets/4715dabf-1bc9-4055-8348-a91f59b1a3a0" /><br>
+添加附件的多种方法：attach.file是添加文件，单attach是添加字符串，如果指定格式为allure.attachment_type.HTML的话，可以将html渲染出来<br>
+<img width="671" height="114" alt="image" src="https://github.com/user-attachments/assets/939f00ee-6b96-45e8-92e8-77ff8b09c602" /><br>
+<img width="763" height="122" alt="image" src="https://github.com/user-attachments/assets/d3ebb24e-e575-4982-a050-cee7c14972de" /><br>
 <img width="758" height="279" alt="image" src="https://github.com/user-attachments/assets/01dfcb5f-9452-4945-b483-5fbc970b142c" /><br>
 以上是常见装饰器用法<br>
 
